# cmake-test-example

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE
config/: CPM.cmake  tasks.json
src/: main.cpp
